--- a/.github/workflows/update_map.yml
+++ b/.github/workflows/update_map.yml
@@ -22,7 +22,8 @@ jobs:
           pip install earthengine-api geemap folium branca jinja2 jupyter
 
       - name: Save Service Account Key
-        run: echo "${{ secrets.GEE_KEY }}" > key.json
+        run: |
+            echo '${{ secrets.GEE_KEY }}' > key.json
 
       - name: Convert notebook to Python
         run: jupyter nbconvert --to script export_try_1-10.ipynb
