--- a/.github/workflows/update_map.yml
+++ b/.github/workflows/update_map.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 0 * * *"   # run every day at midnight UTC
   workflow_dispatch:       # allow manual run from GitHub
 
+permissions:
+  contents: write
+
 jobs:
   update:
     runs-on: ubuntu-latest
