--- a/.github/workflows/update_map.yml
+++ b/.github/workflows/update_map.yml
@@ -32,7 +32,7 @@ jobs:
         run: jupyter nbconvert --to script tryout_goal_LOSS_add_breakwater2.ipynb
 
       - name: Run update script
-        run: python tryout_goal_LOSS_add_breakwater2.ipynb
+        run: python tryout_goal_LOSS_add_breakwater2.py
         env:
           GOOGLE_APPLICATION_CREDENTIALS: key.json
           GEE_SERVICE_ACCOUNT: ${{ secrets.GEE_SERVICE_ACCOUNT }}
